--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,241 +1,262 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/gridLayout"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:ignore="ExtraText">
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity"
+    tools:openDrawer="start">
 
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/popupimg1"
-        android:layout_width="79dp"
-        android:layout_height="99dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp"
-        android:src="@drawable/popuplogo"
-        app:civ_border_color="#616161"
-        app:civ_border_width="3dp"
-
-      />
-    <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="190dp">
-    <TextView
-        android:id="@+id/selectcity"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/raleway_extrabold"
-        android:text="@string/select_your_city"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/main_menu" />
 
+<ScrollView
+    android:id="@+id/scrollhome"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <LinearLayout
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:layout_marginTop="240dp">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="#00008577"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/menu1" />
 
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:columnOrderPreserved="false"
-            android:rowCount="1">
-        <androidx.cardview.widget.CardView
-            android:id="@+id/ind"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_margin="10dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="-20dp"
-            android:background="#666666"
-            app:cardCornerRadius="70dp"
-            app:cardElevation="8dp"
-            >
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/raleway_bold"
+            android:text="Servicera"
+            android:textColor="#000000"
+            android:textSize="30sp"
+            app:fontFamily="@font/raleway_bold"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:fontFamily="@font/raleway_italic"
+            android:text="''An App for On-Demand Service providing professioanls ''"
+            android:textColor="#000000"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:srcCompat="@drawable/finalremoved" />
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="0dp"
+            android:layout_height="185dp"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/ind"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
-                >
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="3dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <ImageView
-                    android:layout_width="142dp"
-                    android:layout_height="142dp"
-                    android:src="@drawable/indore"
-                    />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/bus"
+                        android:layout_width="130dp"
+                        android:layout_height="125dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        app:srcCompat="@drawable/indore" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/bhp"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="0dp"
                 android:layout_margin="10dp"
-                android:layout_marginStart="40dp"
-                android:background="#666666"
-                app:cardCornerRadius="70dp"
-                app:cardElevation="8dp"
-                >
-
-                <LinearLayout
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="3dp">
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    >
+                    android:layout_height="match_parent">
 
                     <ImageView
-                        android:layout_width="142dp"
-                        android:layout_height="142dp"
-                        android:src="@drawable/bhopal2"
-                        />
-
-
-                </LinearLayout>
-
+                        android:id="@+id/imageView3"
+                        android:layout_width="130dp"
+                        android:layout_height="125dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        app:srcCompat="@drawable/bhopal2" />
+                </RelativeLayout>
             </androidx.cardview.widget.CardView>
-
-        </GridLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_marginTop="360dp">
-
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:columnOrderPreserved="false"
-            android:rowCount="1">
-        <androidx.cardview.widget.CardView
-            android:id="@+id/nsp"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="43dp"
-            android:layout_marginStart="105dp"
-            app:cardCornerRadius="70dp"
-            app:cardElevation="8dp">
-
-
-            <LinearLayout
-                android:background="#212121"
-                android:layout_width="match_parent"
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="0dp"
+            android:layout_height="185dp"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/nsp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:orientation="vertical"
-                >
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="3dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
+                    <ImageView
+                        android:id="@+id/bus1"
+                        android:layout_width="130dp"
+                        android:layout_height="125dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        app:srcCompat="@drawable/narsinghpur" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_weight="0">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <ImageView
-                    android:layout_width="142dp"
-                    android:layout_height="142dp"
-                    android:src="@drawable/narsinghpur"
-                    />
-
-
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
-        </GridLayout>
-    </LinearLayout>
-
-
-
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="40dp"
-       android:layout_marginTop="670dp"
-       android:layout_marginBottom="10dp"
-       android:background="@color/whitegrey">
-
-       <TextView
-           android:id="@+id/textAbout"
-           android:layout_width="150dp"
-           android:layout_height="wrap_content"
-           android:layout_marginStart="20dp"
-           android:layout_marginTop="10dp"
-           android:text="About Us ©"
-           android:textColor="@color/black"
-           android:textSize="14sp"
-           app:fontFamily="@font/raleway_extrabold"
-           />
-
-   </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginStart="185dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="600dp">
-
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:columnCount="1"
-            android:columnOrderPreserved="false"
-            android:rowCount="1">
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/train"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:text="About Us"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        app:fontFamily="@font/raleway_bold" />
+                    <ImageView
+                        android:id="@+id/train"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        app:srcCompat="@drawable/logofremove" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="175dp"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
             <androidx.cardview.widget.CardView
                 android:id="@+id/about"
-                android:layout_width="52dp"
-                android:layout_height="52dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="43dp"
-                android:layout_marginStart="105dp"
-                android:layout_marginEnd="35dp"
-                android:background="#212121"
-                app:cardCornerRadius="66dp"
-                app:cardElevation="10dp"
-                >
-
-                <LinearLayout
-                    android:background="#212121"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                app:cardCornerRadius="20dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/airplane"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:text="About Us "
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        app:fontFamily="@font/raleway_bold" />
+                    <ImageView
+                        android:id="@+id/airplane"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        app:srcCompat="@drawable/logofremove" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_weight="2"
+                app:cardElevation="0dp">
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    >
+                    android:gravity="center">
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/lofof"
-                        />
-
-
-                </LinearLayout>
-
-
+                    <TextView
+                        android:id="@+id/description2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="''Servicera Team will assist you whenever you need. Just Feel Free to call !!''"
+                        android:textColor="#333333"
+                        android:textSize="16sp"
+                        app:fontFamily="@font/raleway_italic" />
+                </RelativeLayout>
             </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </GridLayout>
-
-
-
-
-    </LinearLayout>
-
-
-
-</RelativeLayout>
+</ScrollView>
+</androidx.drawerlayout.widget.DrawerLayout>
