--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,8 @@
         <item>@font/anton</item>
         <item>@font/average_sans</item>
         <item>@font/bubblegum_sans</item>
+        <item>@font/cabin_condensed_bold</item>
+        <item>@font/cabin_medium</item>
         <item>@font/raleway_bold</item>
         <item>@font/raleway_extrabold</item>
         <item>@font/raleway_italic</item>
