--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -51,7 +51,7 @@
             android:text="Servicera"
             android:textColor="#000000"
             android:textSize="30sp"
-            app:fontFamily="@font/raleway_bold"
+            app:fontFamily="@font/cabin_condensed_bold"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -211,6 +211,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <TextView
                         android:id="@+id/textView9"
                         android:layout_width="wrap_content"
@@ -221,7 +222,7 @@
                         android:text="About Us "
                         android:textColor="#000000"
                         android:textSize="18sp"
-                        app:fontFamily="@font/raleway_bold" />
+                        app:fontFamily="@font/cabin_condensed_bold" />
                     <ImageView
                         android:id="@+id/airplane"
                         android:layout_width="75dp"
